@@ -1,3 +1,4 @@
+ * Update manifest.xml with added files in opendocument
  * Do not write empty width or height attributes in opendocument
  * Update py:attrs attributes in opendocument
 
